--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -97,7 +97,7 @@ nav .right-part {
 
 nav .right-part .register-btn {
     position: relative;
-    padding: 11px 25px;
+    padding: 11px 20px;
     border: 1px solid var(--medium-gray);
     border-radius: 12px;
     color: var(--medium-gray);
@@ -123,7 +123,6 @@ nav .right-part button:hover {
 
 /* Mobile display */
 .nav-mobile {
-    /* position: relative; */
     padding: 1.5rem 0;
 }
 
@@ -135,6 +134,7 @@ nav .right-part button:hover {
     display: flex;
     justify-content: end;
     top: 0;
+    z-index: 1;
 }
 
 .nav-mobile input {
@@ -162,6 +162,7 @@ nav .right-part button:hover {
     margin-bottom: 0px;
     left: 180px;
     top: 0px;
+    cursor: pointer;
 }
 
 
